--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,13 +1,18 @@
 .container
   .page-header
     %h1 rails-api
-    %p Ruby on Rails web service.
-    %p Build on Ruby 2.0, Rails 4.0.2, Postgres database and Cucumber for testing.
+    %p A simple web service build on Ruby 2.0, Rails 4.0.2 for testing and educational purposes.
 
-  .row
-    %h2 Usage and Code
-    = "RestFul web service project available at: #{link_to 'GitHub', 'https://github.com/MOctavio/rails-api'}, for usage to obtain a generic client list in json format access through #{link_to 'Heroku rails-api', 'http://rails-api.herokuapp.com/clients.json'} or download the code and use it locally.".html_safe
+  .row.col-md-4    
+    %img {:src => "/images/rails-api.png"}
+  .row.col-md-8
+    %h2 Description
+    = "Rails-api offers a simple web front end to manage a basic client list, it also brings the capability to respond in JSON format to other application interface simply by accessing through #{link_to 'Heroku rails-api URI', 'http://rails-api.herokuapp.com/clients/1.json'}.".html_safe
+
+    = "Rails-api web service project available at: #{link_to 'GitHub - rails-api', 'https://github.com/MOctavio/rails-api'}.".html_safe
+
+    = "To see a sample project about how to consume the JSON resource refer to AndroidRestClient project available at: #{link_to 'GitHub - AndroidRestClient', 'https://github.com/MOctavio/AndroidRestClient'}.".html_safe
 
   .footer.row
-    %h2 License
+    %h3 License
     %p= "Rails-api by Mario Octavio Jimenez is licensed under a #{link_to 'Creative Commons Attribution-ShareAlike 3.0 Unported License.', 'http://creativecommons.org/licenses/by-sa/3.0/'}".html_safe
